todo controls section alignment fixed

--- a/css/todoList.css
+++ b/css/todoList.css
@@ -98,7 +98,7 @@ padding: 0px;
   background-color:#c287e6/* #edece8*/;
   padding: 10px;
   font-family: "Poppins",sans-serif;
-  width: 1190px /*1350px*/;
+  width: 1190px ;
   box-sizing: border-box;
 }
 .filters{
@@ -106,7 +106,7 @@ padding: 0px;
   float: left;
   margin-top: 11px;
   margin-right: 5px;
-  width: 155px/*184px*/;
+  width: 155px;
   border: 1px solid #d2a3bb;
 
   background-color: #e6b1cc;
@@ -132,8 +132,7 @@ padding: 0px;
     display: block;
     background-color: #58b85d;
     color: white;
-    margin-bottom: 5px;
-    
+    margin-bottom: 5px; 
     width: 130px;
     height: 30px;
 }
@@ -148,34 +147,31 @@ padding: 0px;
   height: 30px;
 }
 .f-close-icon{
-    width: 20px;
-    height: 20px;
+    width: 17px;
+    height: 17px;
     display: none;
   }
 #no-data-div{
     background-color: rgb(173, 247, 177);
     margin: 20px auto;
     text-align: center;
-    /* width: 250px; */
     height: 100px;
     font-size: 25px;
     padding-top: 40px;
     display: none;
 }
 .list-cotainer{
- /* height: 200px;*/
+    width: 1190px;
+    margin: 0 auto;
 }
 .list-table-cntainer{
-  margin-left: 80px;
-  margin-right: 80px;
   margin-bottom: 100px;
-
 }
 
 .select-list{
   background-color: white;
   border:none;
-  width: 135px;
+  width: 129px;
   height: 30px;
 }
 
@@ -190,9 +186,8 @@ padding: 0px;
 }
 
 .dfilter{
-  /*height: 20px;
-  margin-right: 25px; */
-  width: 314px/*360px*/;
+  
+  width: 314px;
 
 }
 
@@ -216,14 +211,12 @@ input [ type="date"]{
 #list-table{
  margin-top: 10px; 
   border-collapse: collapse;
-  /*border: 1px solid #ddd;*/
   border: 1px solid black;
   font-size: 20px;
-/*  font-weight: 300;*/
   display: table;
   text-align: center;
   padding: 12px;
-  width: 1190px; /*1350px;*/
+  width: 1190px;
   box-sizing: border-box;
 
 }
@@ -237,9 +230,6 @@ input [ type="date"]{
   border-bottom:  1px solid #ddd;
 
 }
-/*#list-table:last-child{
-border-bottom: 1px solid black;
-  }*/
 
 #list-table tr:hover{
    background-color: #f1f1f1;
